  spacing in the text area. (#3023134, Dale Anson)

- Added jflex edit mode (Matthieu Casanova)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language
  (patch #3042398 from jclopes, Matthieu Casanova)

- Added coffee edit mode (patch #3173375 from Dennis Hotson, Matthieu Casanova)

}}}
{{{ UI
- A new status bar widget is added to show the last modified time of the current
  buffer (feature request #1551454 - Matthieu Casanova)

- The Macros menu can now be splitted if there are too many macros or
  macro folders (#3172647 - Matthieu Casanova)

- Updated ColorWellButton to use the dialog provided by JColorChooser rather
  than creating its own dialog since the JColorChooser dialog is much richer.
  (Dale Anson)

- Filter field in PluginManager InstallPanel (#2810926 - Olivier Chafik)

- New View option: Floatable toolbars. (Alan Ezust)

- New TextArea Option: Choice of color ordering w/ subpixel antialiasing.
  (#2989209 - Alan Ezust)

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Factor Mode fix (#3100731 - Valeri Mytinski)

- In conjunction with the fix for tracker 3134215, added a new option to the
  General options pane to let the user choose whether to restore the split
  configuration. (Dale Anson)

- If jEdit doesn't have rights to save a buffer, the dialog doesn't display
  an exception anymore, making the error message less dramatic.
  (Matthieu Casanova)

}}}
{{{ Miscellaneous
- In mode syntax file, SPAN_REGEXP can now end with a regex
 (patch #3162735 from Evan Wright, Matthieu Casanova)

- Dynamic softwrap. Now the softwrap margin is the minimum of the buffer wrap
  guide and the max length displayable in the TextArea (patch #2846458 from
  Suraj Kurapati, Matthieu Casanova)

- Added an option to search for entire words (patch #2842461 from encorejane,
  Matthieu Casanova)

- Included the Windows launcher in the Java installer (Björn "Vampire" Kautler)
